--- a/TokenControlReplacer.csproj
+++ b/TokenControlReplacer.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InspectorIT.ControlReplacer</RootNamespace>
-    <AssemblyName>InspectorIT.ControlReplacer</AssemblyName>
+    <RootNamespace>InspectorIT.Token.ControlReplacer</RootNamespace>
+    <AssemblyName>InspectorIT.TokenControlReplacer</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -56,8 +56,17 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ControlReplacer.cs" />
+    <Compile Include="TokenControlReplacer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="README.html">
+      <DependentUpon>README.md</DependentUpon>
+    </Content>
+    <Content Include="README.md" />
+    <Content Include="README.min.html">
+      <DependentUpon>README.html</DependentUpon>
+    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
